# nexcore-fhir

./: Cargo.toml  README.md
src/: adapter.rs  base.rs  grounding.rs  lib.rs
src/resources/: adverse_event.rs  bundle.rs  condition.rs  encounter.rs  medication.rs  medication_administration.rs  mod.rs  observation.rs  organization.rs  patient.rs  practitioner.rs
