[package]
name = "nexcore-fhir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Focused FHIR R4 types for pharmacovigilance — AdverseEvent, Patient, Medication, and PV-relevant resources"

[dependencies]
nexcore-lex-primitiva = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
